# anchored-solido

./: Anchor.toml  package.json  readme.md
.github/actions/setup-anchor/: action.yaml
.github/workflow/: build.yml
.github/workflows/: build.yaml
programs/asolido/: Cargo.toml
programs/asolido/src/: account_map.rs  error.rs  initialize.rs  lib.rs  logic.rs  maintainers.rs  metrics.rs  process.rs  process_managment.rs  process_validator.rs  state.rs  token.rs  validators.rs  vote_state.rs
tests/: add_remove_validator.ts  anchored-solido.ts  deposit.ts  initialize.ts  maintainers.ts
