[package]
name = "asolido"
version = "0.1.0"
description = "Anchored Solido implementation"
edition = "2018"
authors = ["Tengiz Sharafiev <btolfa@gmail.com>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "asolido"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.1"
anchor-spl = "0.22.1"
