[package]
name = "asolido"
version = "0.1.0"
description = "Anchored Solido implementation"
edition = "2018"
authors = ["Tengiz Sharafiev <btolfa@gmail.com>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "asolido"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.23.0"
anchor-spl = "0.23.0"
solana-program = "1.8.16"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
num-derive = "0.3"
num-traits = "0.2"
